# bitbucket-cli2

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/bb/: __init__.py  __main__.py
src/bitbucket_cli2/: __main__.py  bitbucket.py  profilekeys.py
tests/: __init__.py  test_main.py
