[tool.poetry]
name = "bitbucket-cli2"
version = "0.1.0"
description = "BitBucket CLI"
authors = ["Adam Jackman <adam@acjackman.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/acjackman/bitbucket-cli2"
repository = "https://github.com/acjackman/bitbucket-cli2"
documentation = "https://bitbucket-cli2.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/acjackman/bitbucket-cli2/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
boltons = "^20.2.0"
requests = "^2.24.0"
keyring = "^21.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2"}
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "^2.9.1"
xdoctest = "^0.14.0"
sphinx = "^3.1.2"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
darglint = "^1.5.3"
reorder-python-imports = "^2.3.1"
pre-commit-hooks = "^3.2.0"

[tool.poetry.scripts]
bb = "bitbucket_cli2.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bitbucket_cli2"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
